[package]
name = "serde_regex"
version = "1.1.0"
edition = "2018"
rust-version = "1.65"
description = "A serde wrapper that (de)serializes regex as string"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["serde", "regex"]
categories = ["encoding"]
homepage = "https://github.com/tailhook/serde-regex"
documentation = "https://docs.rs/serde_regex"

[dependencies]
serde = "1.0.0"
regex = "1.5.5"

[dev-dependencies]
serde_derive = "1.0.0"
serde_json = "1.0.39"
