[package]
name = "serde_regex"
version = "1.2.0"
edition = "2018"
rust-version = "1.65"
description = "A serde wrapper that (de)serializes regex as string"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["serde", "regex"]
categories = ["encoding"]
homepage = "https://github.com/tailhook/serde-regex"
documentation = "https://docs.rs/serde_regex"

[dependencies]
serde = "1.0.0"
regex = "1.5.5"

[dev-dependencies]
serde_derive = "1.0.0"
serde_json = "1.0.39"

[lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(instant_acme_docsrs)"] }
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
upper_case_acronyms = "warn"
use_self = "warn"
